Thu Sep  3 18:29:23 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm (lists): Return the category variable.

	* lib/mj_cf_data.pl: Added the 'catrgory' variable.

	* lib/Mj/Config.pm (parse_access_rules): Restructure a bit to have
 	separate sets of legal actions per request and to orovide the list
 	of legal requests for an action in the event of a parsing error.
	(_compile_rule): No longer needs to pass a Safe object to _re_match.

Tue Sep  1 00:12:14 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Format.pm (which): Fixes to give proper output for large
 	numbers of matches.

	* lib/Mj/SimpleDB/Text.pm (get_matching_regexp): Better log
 	message; call _re_match instead of comparing directly.
	(get_matching_quick_regexp): Ditto.

	* lib/Mj/SubscriberList.pm: Remove fields not needed because of
 	the registration database.

	* lib/Majordomo.pm (who_chunk): When we need to strip out
 	comments, allocate an Mj::Addr and work with it.

	* lib/Mj/List.pm (get_member): Return the canonical form of the
 	address as the key, not the address itself.

	* lib/Majordomo.pm (set): Forgot to make the list.

	* lib/Mj/TextOutput.pm (unalias): Use proper arguments: the victim
 	is the supplied address.

	* lib/Majordomo.pm (_unalias): Return a proper value.

Mon Aug 31 00:04:59 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Token.pm (confirm): Make sure that we pass
 	MIME::Entity::build a string for an address instead of an Addr
 	object; it can't deal with it.

	* lib/Majordomo.pm (alias): Don't generate or pass 'mismatch'.
	(_unalias): New function.
	(unalias): Convert to work with new global alias list and do
 	security checking.

Sun Aug 30 00:04:51 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/parser_data.pl: 'unalias' no longer takes a list.

	* lib/Majordomo.pm (connect): The trigger command doesn't take
 	addresses.

	* lib/Mj/Token.pm (t_info): Untaint the token.
